@@ -12,40 +12,6 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-FROM amazonlinux:2
-
-LABEL VENDOR="Cordite.foundation" \
-      MAINTAINER="devops@cordite.foundation"
-
-EXPOSE 8080
-
-ENV NMS_TLS=false
-ENV NMS_DOORMAN=true
-ENV NMS_CERTMAN=true
-ENV NMS_PORT=8080
-ENV NMS_DB=db
-ENV NMS_MONGO_CONNECTION_STRING=mongodb://localhost:27017
-#ENV "JVM_OPTS=-Xmx12g -Xms12g -XX:MaxPermSize=1024m"
-#RUN yum install ps
-#ENV NMS_ROOT_CA_FILE_PATH=certs/root.jks
-#ENV NMS_MONGOD_LOCATION=/opt/cordite/mongodb-linux-x86_64-amazon2-4.0.4/bin/mongod
-
-WORKDIR /opt/cordite
-
-RUN yum install -y java-1.8.0-openjdk-headless shadow-utils.x86_64 \
-  && yum clean all \
-  && mkdir -p /opt/cordite/db /opt/cordite/logs /home/cordite \
-  && groupadd -g 1000 -r cordite \
-  && useradd -r -u 1000 -g cordite cordite \
-  && chgrp -R 0 /opt/cordite \
-  && chmod -R g=u /opt/cordite \
-  && chown -R cordite:cordite /opt/cordite /home/cordite
-
-USER cordite
-
-VOLUME /opt/cordite/db /opt/cordite/logs /opt/cordite/certs
-
-COPY target/network-map-service/lib/ /opt/cordite/lib/
-COPY target/network-map-service/network-map-service.jar /opt/cordite/network-map-service.jar
+FROM cordite/network-map
 
 CMD ["/usr/bin/java", "-Xmx64000m", "-Xms12000m", "-cp", "/opt/cordite/network-map-service.jar:/opt/cordite/lib/*", "io.cordite.networkmap.NetworkMapApp"]
